--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,84 @@
-.App {
-  text-align: center;
+.bg {
+  
 }
+.h1{
+ margin-top: 0;
+ color: white;
+}
+.align {
+  
+  margin-top:50px;
+  margin-bottom: 50px;
+ 
+}
+.align2 {
+  margin-left: 10px;
+  border-radius: 20px;
+  background-color: lightcyan;
+  padding: 5px 10px;
+  font-size: 16px;
+}
+.align3 {
+ text-align: center;
+ background-color: rgb(14, 0, 19);
+ height: 100vh;
+}
+.align4 {
+  width: 600px;
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0 auto;
+}
+.b1{
+  border: transparent;
+  border-radius: 10px;
+  padding: 5px 10px;
+  font-size: 12px;
+}
+.b2{
+  border: transparent;
+  border-radius: 10px;
+  padding: 5px 10px;
+  font-size: 12px;
+  background-color: greenyellow;
+}
+.b3{
+  border: transparent;
+  border-radius: 10px;
+  padding: 5px 10px;
+  font-size: 12px;
+  background-color: yellow;
+}
+.task{
+color: whitesmoke;
 
+font-size: 14px;
+font-weight: 800;
+}
+.comp{
+  border: transparent;
+margin-right: 20px;
+background-color: rgb(5, 177, 5);
+border-radius: 10px;
+}
+.del{
+  border: transparent;
+margin-right: 20px;
+border-radius: 80px;
+padding: 5px;
+background-color: red;
+}
+.dec{
+ 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin: 20px auto;
+  width: 300px; 
+ 
+}
+.right{
+  justify-self: flex-end;
+  
+}
